src/objects/Issue_Request_Service_Information__c.object
<CustomObject>
    <description>This is a use case specific object for data collections that are occurring in the field and is used to coordinate information about the people and organizations supporting the effort.</description>
    <fields>
        <fullName>Date_Time_Completed__c</fullName>
        <inlineHelpText>Date the contractor finished the work</inlineHelpText>
        <label>Date/Time Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Issue_Request_Information__c</fullName>
        <label>Issue/Request Information</label>
        <referenceTo>IssueRequest_Life_Cycle__c</referenceTo>
        <relationshipName>Issue_Request_Service_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Responder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issue_Request_Service_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <inlineHelpText>Date the contractor responded to the requirement</inlineHelpText>
        <label>Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_End_Date__c</fullName>
        <inlineHelpText>Service end date/abatement end date</inlineHelpText>
        <label>Scheduled End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Start_Date__c</fullName>
        <inlineHelpText>Schedule the service task(abatement)</inlineHelpText>
        <label>Scheduled Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Issue_Request_Service_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Status__c</fullName>
        <label>Support Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>En Route</fullName>
                </value>
                <value>
                    <fullName>on-hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Assignment Manager Service Information</label>
    <nameField>
        <displayFormat>SI-{0}  {MM}-{DD}-{YYYY},</displayFormat>
        <label>Assignment Manager Service Information N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Manager Service Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Response_Date_less_than_Complete_Date</fullName>
        <active>true</active>
        <description>Response Date less than scheduled Completion date</description>
        <errorConditionFormula>Response_Date__c &gt;Date_Time_Completed__c</errorConditionFormula>
        <errorMessage>Response Date less than scheduled Completion date</errorMessage>
    </validationRules>
</CustomObject>